[project]
name = "testing-time-series-stationarity-with-kpss-and-dickey-fuller"
version = "0.1.0"
description = "Companion code for Medium article: testing time series stationarity with kpss and dickey fuller"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "statsmodels>=0.14.6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
